--- a/web/fileexplorer/style.css
+++ b/web/fileexplorer/style.css
@@ -148,3 +148,135 @@ div
 	font-weight: 400;
 	color: var(--main);
 }
+
+.loginwrapper {
+	margin: auto 0px;
+	width: calc( 5vw + 300px );
+	box-shadow: 0px 0px 30px black;
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.wrapper {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+h2 {
+	padding: 0;
+	margin: 20px 0px;
+	color: var(--main);
+	font-size: 35px;
+}
+
+input {
+	color: white;
+	width: 90%;
+	padding: 10px 0;
+	background-color: transparent;
+	border:none;
+	border-bottom: 5px solid var(--main);
+	outline-width: 0px;
+	font-size: 20px;
+	margin-bottom: 30px;
+}
+
+.login {
+	width: 100%;
+	padding: 20px 10%;
+	text-align: center;
+	margin: 0;
+}
+
+button {
+	color: black;
+	font-size: 20px;
+	margin-bottom: 30px;
+	padding: 10px 20px;
+	background-color: var(--main);
+	border: 5px solid var(--main);
+	border-radius: 10px;
+	outline-width: 0px;
+	transition: 0.1s;
+}
+button:hover
+{
+	cursor: pointer;
+	color: white;
+	background-color: var(--bg);
+}
+
+#error {
+	margin: 0;
+	padding: 0;
+	color: red;
+	font-size: 15px
+}
+
+.topnav {
+	width: 100%;
+	background-color: transparent;
+	height: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+.acct {
+	position: absolute;
+	right: 25px;
+	top: 25px;
+	transition: 0.1s;
+	border: 5px solid var(--main);
+	border-radius: 30px;
+	width: 50px;
+	height: 50px;
+	background-color: var(--main);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 30px;
+	color: white;
+	
+}
+.acct:hover
+{
+	color: var( --main );
+	background-color: var(--bg);
+	cursor: pointer;
+}
+.acct:active
+{
+	color: white;
+}
+
+#acctmenu {
+	transition: 0.1s;
+	position: absolute;
+	right: 50px;
+	top: 90px;
+	display: none;
+	list-style-type: none;
+	text-align: center;
+	padding: 10px 10px;
+	background-color: var(--main);
+	border-radius: 10px;
+}
+#acctmenu li
+{
+	transition: 0.1s;
+	color: white;
+	padding: 18px 12px;
+	font-size: 20px;
+	border-bottom: 2px solid white
+}
+#acctmenu li:hover 
+{
+	cursor: pointer;
+	color: var(--bg);
+}
+
